--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset=utf-8>
     <title>Video Loop</title>
+    <link rel="icon" type="image/ico" href="favicon.ico">
     <link rel="stylesheet" href="./style.scss" />
   </head>
   <body class="">
