got full screen working
still need to full screen the browser, but I think thats ok

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       Invert
     </label>
     <br /><br />
-    <button id="id_separate">Toggle Separate Layers</button>
+    <button id="id_changedisplay">Change display</button>
     <button id="id_setbg">Set background</button>
 
     <script src="./js/index.js"></script>
