get horizontal flip working

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,10 @@
         <input type="checkbox" class="transform-check" name="invert" />
         Invert
       </label>
+      <label>
+        <input type="checkbox" class="transform-check" name="flipHorizontal" />
+        Flip Horizontal
+      </label>
       <br /><br />
       <button id="id_changedisplay">Change display</button>
       <button id="id_setbg">Set background</button>
